--- a/style.css
+++ b/style.css
@@ -6,14 +6,44 @@
    font-display: swap;
  }
 
+ @font-face{
+   font-family: "Geometria-2";
+   src: url('fonts/geometria_light.otf') format('opentype');
+   font-weight: 300;
+   font-style: normal;
+   font-display: swap;
+ }
+
+ @font-face {
+   font-family: 'Geometria-3';
+   src: url('/fonts/Geometria-3.eot'); /* IE9 Compatibility Mode */
+   src: url('/fonts/Geometria-3.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/fonts/Geometria-3.woff') format('woff'), /* Modern Browsers */
+        url('/fonts/Geometria-3.ttf') format('truetype'); /* Legacy iOS */
+   font-weight: 400;
+   font-style: normal;
+}
+
+/* Пример использования */
+body {
+   font-family: 'Geometria', sans-serif;
+}
+
+
 * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
 }
 
+span {
+   display: block;
+   margin-top: 30px;
+}
+
 body {
    font-family: "Geometria", sans-serif;
+   font-weight: 400;
    font-size: 20px;
    color: red;
    line-height: 1.2;
@@ -21,8 +51,23 @@ body {
 }
 
 button {
-   padding: 5px 30px;
-   display: inline-block;
+   font-family: "Geometria", sans-serif;
+   padding: 10px 30px;
+   font-size: 20px;
+   line-height: 1;
+   display: block;
+   margin: 12px 0;
+   background-color: transparent;
+   border: 2px solid #000;
+   border-radius: 5px;
+}
+
+.g-2 {
+   font-family: "Geometria-2", sans-serif !important;
+}
+
+.g-3 {
+   font-family: "Geometria-3", sans-serif !important;
 }
 
 span {
